Simplified build system

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
 			"name": "Debug",
 			"type": "cppdbg",
 			"request": "launch",
-			"program": "${workspaceFolder}/target/NewProject",
+			"program": "${workspaceFolder}/target/Yarbil",
 			"args": [],
 			"stopAtEntry": false,
 			"cwd": "${workspaceFolder}",
@@ -19,39 +19,8 @@
 					"ignoreFailures": false
 				}
 			],
-			"windows": {
-				"miDebuggerPath": "C:/raylib/w64devkit/bin/gdb.exe",
-			},
-			"osx": {
-				"MIMode": "lldb"
-			},
-			"linux": {
-				"miDebuggerPath": "/usr/bin/gdb",
-			},
+			"miDebuggerPath": "C:/raylib/w64devkit/bin/gdb.exe",
 			"preLaunchTask": "build debug"
 		},
-		{
-			"name": "Run",
-			"type": "cppdbg",
-			"request": "launch",
-			"args": [],
-			"stopAtEntry": false,
-			"cwd": "${workspaceFolder}",
-			"environment": [],
-			"externalConsole": false,
-			"program": "${workspaceFolder}/${fileBasenameNoExtension}",
-			"MIMode": "gdb",
-			"windows": {
-				"program": "${workspaceFolder}/${fileBasenameNoExtension}.exe",
-				"miDebuggerPath": "C:/raylib/w64devkit/bin/gdb.exe"
-			},
-			"osx": {
-				"MIMode": "lldb"
-			},
-			"linux": {
-				"miDebuggerPath": "/usr/bin/gdb"
-			},
-			"preLaunchTask": "build release",
-		}
 	]
 }
