--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,5 +16,8 @@
 		"array": "c",
 		"string": "c",
 		"string_view": "c"
-	}
+	},
+	"binary-file-viewer.parserFolders": [
+		"C:\\Users\\Nick\\Desktop\\CDev\\RaylibProjects\\trials-of-yarbil\\"
+	]
 }
