--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,7 +15,8 @@
 		"main.h": "c",
 		"array": "c",
 		"string": "c",
-		"string_view": "c"
+		"string_view": "c",
+		"utils.h": "c"
 	},
 	"binary-file-viewer.parserFolders": [
 		"C:\\Users\\Nick\\Desktop\\CDev\\RaylibProjects\\trials-of-yarbil\\"
