Sprites have more fields
- Sprite has texRegion. scale, origin, rotation, and tint
- DrawSpritesSystem uses DrawTexturePro with pro parameters to take use of the new Sprite fields
- AddSpriteComponent function to set all sprite values to default and add it to the given entityId. Also sets the texture id to the given texId.
- NewPlayer uses AddSpriteComponent

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,7 +16,10 @@
 		"array": "c",
 		"string": "c",
 		"string_view": "c",
-		"utils.h": "c"
+		"utils.h": "c",
+		"stdlib.h": "c",
+		"math.h": "c",
+		"strings.h": "c"
 	},
 	"binary-file-viewer.parserFolders": [
 		"C:\\Users\\Nick\\Desktop\\CDev\\RaylibProjects\\trials-of-yarbil\\"
